correctioin scrollbar

--- a/app/assets/scss/lspd-theme.scss
+++ b/app/assets/scss/lspd-theme.scss
@@ -71,28 +71,7 @@
 
 }
 
-html{
 
-    -ms-overflow-style: none;
-    scrollbar-color: var(--color-blue-primary) var(--color-blue-opacity-50);
-    scrollbar-width: thin;
-
-    ::-webkit-scrollbar {
-        width: 5px;
-    }
-    
-    ::-webkit-scrollbar-track {
-        background-color: var(--color-blue-opacity-50);
-        border-radius: 100px;
-    }
-    
-    ::-webkit-scrollbar-thumb {
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        background-color: var(--color-blue-primary);
-        border-radius: 100px;
-    }
-
-}
 
 
 /**** End ******/
